--- a/style.css
+++ b/style.css
@@ -14,12 +14,16 @@ body {
 
 header {
     background: #ebebeb;
-    text-align: center;
+    color: #777;
+    padding: 20px;
+    margin: 10px 0 10px 0;
 }
 
 nav {
     background: #ebebeb;
-    text-align: center;
+    color: #777;
+    margin: 10px 0 10px 0;
+    padding: 20px;
 }
 
 .clearfix::after {
@@ -31,11 +35,12 @@ nav {
   
 section {
     background: #ebebeb;
-    width: 50%;
+    width: 495px;
     float: left;
-    border-style: solid;
-    border-width: 5px;
-    border-color: #ebebeb;
+    padding: 20px;
+    /* border-style: solid;
+    border-width: 20px;
+    border-color: #ebebeb; */
 }
 
 /* section, aside {
@@ -44,31 +49,38 @@ section {
 
 #aside {
     background: #ebebeb;
+    color: #777;
     float: right;
-    /* clear: right; */
-    width: 50%;
-    border-color: #ebebeb;
+    /* border-color: #ebebeb;
     border-style: solid;
-    border-width: 50px;
+    border-width: 50px; */
     text-align: center;
-    /* relative and abosulte positioning to move aside to
-        the top of the box */
+    width: 455px;
+    height: 293px;
+    padding: 20px;
 }
 
 footer {
     background: #ebebeb;
-    padding: 10px;
+    padding: 20px;
+    margin: 10px 0 10px 0;
+    color: #777;
 }
 
 article {
     color: #ebebeb;
     background: #777;
-    border-style: solid;
-    border-width: 5px;
-    border-color:#777;
+    height: 200px;
+    padding-top: 10px;
 }
 
 h1, p {
     color: #777;
-    background: #ebebeb
+    background: #ebebeb;
+}
+
+#h123, #p1 {
+    padding: 20px;
+    margin: 20px auto;
+    width: 80%;
 }
